--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>100 DAYS CSS DAY 1</title>
   </head>
   <body>
